--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -741,9 +741,9 @@ image::user_guide_images/controls_power_custom.png[]
 
 The controls at the right are power stepping controls. They provide more powerfull ways of stepping through the code.
 
-Clicking on the back and forward button will use the selected power stepping tool.
+Clicking on the first, back, next or last buttons will navigate the timeline using the selected power stepping tool in the dropdown.
 
-There are currently 5 power stepping tools :
+There are currently six power stepping tools :
 
 - `identity`, will step to the prev/next value which identity is the same as the current value.
 - 'equality', will step to the prev/next value which is equals (clojure equality) to the current value.
